<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".DeviceScanActivity">

    <item android:id="@+id/menu_refresh"
         android:title="@string/menu_refresh"
        android:checkable="false"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_shutdown"
        android:title="@string/menu_shutdown"
        android:checkable="false"
        android:orderInCategory="9"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
