<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/menu_refresh"
        android:checkable="false"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_connect"
        android:title="@string/menu_connect"
        android:orderInCategory="50"
        android:showAsAction="ifRoom|withText"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_disconnect"
        android:title="@string/menu_disconnect"
        android:orderInCategory="51"
        android:showAsAction="ifRoom|withText"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
